--- a/clients/android/app/src/main/res/layout/dialog_create_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_create_file.xml
@@ -28,7 +28,7 @@
         android:layout_marginBottom="4dp">
 
         <EditText
-            android:id="@+id/create_file_text"
+            android:id="@+id/create_file_text_part"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/dialog_file_name"
@@ -47,6 +47,18 @@
             style="@style/Text.Small"
             android:inputType="text"
             android:layout_weight="0.4"
+            android:importantForAutofill="no"
+            android:imeOptions="actionDone" />
+
+        <EditText
+            android:id="@+id/create_file_text"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Text.Small"
+            android:inputType="text"
+            android:layout_weight="1"
+            android:layout_marginEnd="10dp"
             android:importantForAutofill="no"
             android:imeOptions="actionDone" />
 
