--- a/clients/android/app/src/main/res/layout/fragment_list_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_list_files.xml
@@ -9,36 +9,43 @@
             type="app.lockbook.model.ListFilesViewModel" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/fragment_list_files"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <cafe.adriel.krumbsview.KrumbsView
-            android:id="@+id/krumbsView"
-            android:layout_gravity="top"
+            android:id="@+id/file_breadcrumb_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="top"
             android:background="@color/colorPrimary"
-            app:krumbsStartItem="Home"
-            app:krumbsTextSize="24sp"
+            app:krumbsAnimationDuration="longDuration"
+            app:krumbsAnimationType="growShrink"
             app:krumbsCurrentItemTextColor="@color/colorAccent"
             app:krumbsPreviousItemTextColor="@color/colorPrimaryDark"
+            app:krumbsSeparatorIcon="@drawable/ic_baseline_arrow_forward_ios_24"
             app:krumbsSeparatorTintColor="@color/colorPrimaryDark"
-            app:krumbsSeparatorIcon="@drawable/ic_play_arrow"
-            app:krumbsAnimationType="growShrink"
-            app:krumbsAnimationDuration="longDuration"/>
+            app:krumbsStartItem="Home"
+            app:krumbsTextSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/krumbsView"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/list_files_refresh"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/files_list"
@@ -53,7 +60,8 @@
             android:id="@+id/list_files_frame_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:animateLayoutChanges="true">
+            android:animateLayoutChanges="true"
+            app:layout_constraintTop_toTopOf="@+id/krumbsView">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -67,33 +75,33 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
+                    android:contentDescription="@string/list_files_create_document"
                     android:onClick="@{() -> listFilesViewModel.onNewDocumentFABClicked(true)}"
                     android:src="@drawable/round_gesture_white_18dp"
                     android:visibility="gone"
-                    app:rippleColor="@color/light"
-                    android:contentDescription="@string/list_files_create_document" />
+                    app:rippleColor="@color/light" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/list_files_fab_folder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
+                    android:contentDescription="@string/list_files_create_folder"
                     android:onClick="@{() -> listFilesViewModel.onNewFolderFABClicked()}"
                     android:src="@drawable/round_folder_white_18dp"
                     android:visibility="gone"
-                    app:rippleColor="@color/light"
-                    android:contentDescription="@string/list_files_create_folder" />
+                    app:rippleColor="@color/light" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/list_files_fab_document"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
+                    android:contentDescription="@string/list_files_create_document"
                     android:onClick="@{() -> listFilesViewModel.onNewDocumentFABClicked(false)}"
                     android:src="@drawable/ic_baseline_insert_drive_file_24"
                     android:visibility="gone"
-                    app:rippleColor="@color/light"
-                    android:contentDescription="@string/list_files_create_document" />
+                    app:rippleColor="@color/light" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/list_files_fab"
@@ -103,13 +111,13 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="18dp"
                     android:layout_marginBottom="18dp"
+                    android:contentDescription="@string/list_files_create_file"
                     android:onClick="@{() -> listFilesViewModel.collapseExpandFAB()}"
                     android:src="@drawable/ic_baseline_add_24"
-                    app:rippleColor="@color/light"
-                    android:contentDescription="@string/list_files_create_file" />
-                
+                    app:rippleColor="@color/light" />
+
             </LinearLayout>
         </FrameLayout>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
