--- a/clients/android/app/src/main/res/layout/dialog_create_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_create_file.xml
@@ -56,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/Text.Small"
+            android:hint="@string/create_file_default_file_hint"
             android:inputType="text"
             android:layout_weight="1"
             android:layout_marginEnd="10dp"
