changed default extenstion to .md

--- a/clients/android/app/src/main/res/layout/dialog_create_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_create_file.xml
@@ -44,6 +44,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/dialog_file_extension"
+            android:text="@string/create_file_dialog_default_extension"
             style="@style/Text.Small"
             android:inputType="text"
             android:layout_weight="0.4"
