--- a/clients/android/app/src/main/res/layout/dialog_move_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_move_file.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    style="@style/DarkBlue.Dialog"
+    style="@style/Main.Dialog"
     android:padding="10dp">
 
     <ProgressBar
@@ -41,14 +41,14 @@
 
         <Button
             android:id="@+id/move_file_cancel"
-            style="@style/Button.Borderless.Colored"
+            style="@style/Main.Button.Borderless.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel" />
 
         <Button
             android:id="@+id/move_file_confirm"
-            style="@style/Button.Borderless.Colored"
+            style="@style/Main.Button.Borderless.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/move_file_confirm" />
