--- a/clients/android/app/src/main/res/layout/grid_layout_file_item.xml
+++ b/clients/android/app/src/main/res/layout/grid_layout_file_item.xml
@@ -15,7 +15,7 @@
 
         <TextView
             android:id="@+id/grid_file_name"
-            style="@style/File.TitleGrid"
+            style="@style/Main.File.TitleGrid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
