--- a/clients/android/app/src/main/res/layout/dialog_create_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_create_file.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/create_file_layout"
-    style="@style/DarkBlue.Dialog"
+    style="@style/Main.Dialog"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Text.Medium"
+        style="@style/Main.Text.Medium"
         android:fontFamily="sans-serif"
         android:paddingTop="8dp"
         android:textAlignment="center"
@@ -32,7 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/dialog_file_name"
-            style="@style/Text.Small"
+            style="@style/Main.Text.Small"
             android:inputType="text"
             android:layout_weight="1"
             android:layout_marginEnd="10dp"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/dialog_file_extension"
             android:text="@string/create_file_dialog_default_extension"
-            style="@style/Text.Small"
+            style="@style/Main.Text.Small"
             android:inputType="text"
             android:layout_weight="0.4"
             android:importantForAutofill="no"
@@ -56,7 +56,7 @@
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Text.Small"
+            style="@style/Main.Text.Small"
             android:hint="@string/create_file_default_file_hint"
             android:inputType="text"
             android:layout_weight="1"
@@ -76,14 +76,14 @@
 
         <Button
             android:id="@+id/create_file_cancel"
-            style="@style/Button.Borderless.Colored"
+            style="@style/Main.Button.Borderless.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel" />
 
         <Button
             android:id="@+id/create_file_create"
-            style="@style/Button.Borderless.Colored"
+            style="@style/Main.Button.Borderless.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/create_file_create" />
