--- a/clients/android/app/src/main/res/layout/dialog_duration_picker.xml
+++ b/clients/android/app/src/main/res/layout/dialog_duration_picker.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog_duration_days_label"
-        style="@style/Text.Medium"
+        style="@style/Main.Text.Medium"
         android:fontFamily="sans-serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/duration_days"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog_duration_hours_label"
-        style="@style/Text.Medium"
+        style="@style/Main.Text.Medium"
         android:fontFamily="sans-serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/duration_hours"
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog_duration_minutes_label"
-        style="@style/Text.Medium"
+        style="@style/Main.Text.Medium"
         android:fontFamily="sans-serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/duration_minutes"
