--- a/clients/android/app/src/main/res/layout/fragment_list_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_list_files.xml
@@ -55,7 +55,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:animateLayoutChanges="true"
-            app:layout_constraintTop_toTopOf="@+id/files_breadcrumb_bar">
+            app:layout_constraintTop_toTopOf="@+id/files_breadcrumb_bar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
                 android:id="@+id/list_files_empty_folder"
@@ -63,7 +66,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                style="@style/Text.Caption"
+                style="@style/Main.Text.Caption"
                 android:gravity="center"
                 android:text="@string/empty_folder" />
 
