--- a/clients/android/app/src/main/res/layout/activity_handwriting_editor.xml
+++ b/clients/android/app/src/main/res/layout/activity_handwriting_editor.xml
@@ -85,49 +85,46 @@
         <androidx.appcompat.widget.Toolbar
             style="@style/Main.Text.Medium"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:elevation="4dp"
-            android:minWidth="30dp"
-            android:theme="@style/Main.Actionbar">
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|center_vertical"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="center_horizontal" >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="start"
-                android:orientation="horizontal">
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-                <ImageButton
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/drawing_color_white"
+                    style="@style/Main.DrawingButton"
+                    android:background="@android:color/white" />
+
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_blue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/Main.ImageButton"
-                    android:contentDescription="Blue"
-                    android:src="" />
+                    style="@style/Main.DrawingButton"
+                    android:background="@android:color/holo_blue_light" />
 
-                <ImageButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_red"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/Main.ImageButton"
-                    android:contentDescription="Red"
-                    android:src="" />
+                    style="@style/Main.DrawingButton"
+                    android:background="@android:color/holo_red_light" />
 
-                <ImageButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_green"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/Main.ImageButton"
-                    android:contentDescription="Green"
-                    android:src="" />
+                    style="@style/Main.DrawingButton"
+                    android:background="@android:color/holo_green_light" />
 
-                <ImageButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_orange"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/Main.ImageButton"
-                    android:contentDescription="Orange"
-                    android:src="" />
+                    style="@style/Main.DrawingButton"
+                    android:background="@android:color/holo_orange_light" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/drawing_color_purple"
+                    style="@style/Main.DrawingButton"
+                    android:background="@android:color/holo_purple" />
 
             </LinearLayout>
 
@@ -136,53 +133,32 @@
         <androidx.appcompat.widget.Toolbar
             style="@style/Main.Text.Medium"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:elevation="4dp"
-            android:minWidth="30dp"
-            android:theme="@style/Main.Actionbar">
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="center_horizontal" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="start"
-            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/drawing_stylus_width_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/Main.ImageButton"
-                android:contentDescription="Blue"
-                android:src="" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="Erase"/>
 
-            <ImageButton
-                android:id="@+id/drawing_stylus_width_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/Main.ImageButton"
-                android:contentDescription="Red"
-                android:src="" />
+                <androidx.appcompat.widget.SwitchCompat
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginBottom="10dp" />
 
-            <ImageButton
-                android:id="@+id/drawing_stylus_width_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/Main.ImageButton"
-                android:contentDescription="Green"
-                android:src="" />
+            </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/drawing_stylus_width_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/Main.ImageButton"
-                android:contentDescription="Orange"
-                android:src="" />
-
-        </LinearLayout>
-
-    </androidx.appcompat.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar>
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
