--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -15,12 +15,16 @@
   <color name="white">#FFFFFF</color>
   <color name="grey">#787878</color>
 
+  <color name="transparent_black">#94000000</color>
+  <color name="transparent_white">#94E3E5EB</color>
+
   <color name="selectedFileBackground">#64B5F6</color>
   <color name="navigationBarColor">@color/black</color>
   <color name="iconStatusBarColor">@color/light</color>
   <color name="colorPrimary">@color/blue</color>
   <color name="colorAccent">@color/blue</color>
   <color name="colorPrimaryDark">@color/black</color>
+  <color name="drawingToolbarBackground">@color/transparent_black</color>
   <color name="windowBackground">@color/black</color>
   <color name="textColor">@color/light</color>
   <color name="scannerIconColor">@color/light</color>
