fully working with colors and erase, no sizes yet

--- a/clients/android/app/src/main/res/layout/dialog_create_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_create_file.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/create_file_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/Main.Text.Medium"
