--- a/clients/android/app/src/main/res/layout/activity_handwriting_editor.xml
+++ b/clients/android/app/src/main/res/layout/activity_handwriting_editor.xml
@@ -15,44 +15,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-<!--                <androidx.appcompat.widget.Toolbar-->
-<!--                    style="@style/Text.Medium"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:elevation="4dp"-->
-<!--                    android:minHeight="?attr/actionBarSize"-->
-<!--                    android:theme="@style/DarkBlue.Actionbar">-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        android:gravity="start"-->
-<!--                        android:orientation="horizontal">-->
-
-<!--                        <TextView-->
-<!--                            android:id="@+id/handwriting_editor_drawing_name"-->
-<!--                            style="@style/Toolbar.Title"-->
-<!--                            android:layout_width="150sp"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:singleLine="true" />-->
-
-<!--                        <Spinner-->
-<!--                            android:id="@+id/handwriting_editor_pallete_spinner"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:paddingHorizontal="5dp"-->
-<!--                            android:spinnerMode="dropdown" />-->
-
-<!--                        <androidx.appcompat.widget.SwitchCompat-->
-<!--                            android:id="@+id/handwriting_editor_erase"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginStart="20dp"-->
-<!--                            android:text="@string/handwriting_editor_erase" />-->
-<!--                    </LinearLayout>-->
-
-<!--                </androidx.appcompat.widget.Toolbar>-->
-
         <ProgressBar
             android:id="@+id/handwriting_editor_progress_bar"
             style="?android:attr/progressBarStyleHorizontal"
@@ -82,65 +44,52 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
-            style="@style/Main.Text.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|center_vertical"
-            android:background="@color/colorPrimaryDark"
-            android:gravity="center_horizontal" >
-
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:background="@color/colorPrimaryDark"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_white"
                     style="@style/Main.DrawingButton"
-                    android:background="@android:color/white" />
+                    app:backgroundTint="@android:color/white" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_blue"
                     style="@style/Main.DrawingButton"
-                    android:background="@android:color/holo_blue_light" />
+                    app:backgroundTint="@android:color/holo_blue_light" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_red"
                     style="@style/Main.DrawingButton"
-                    android:background="@android:color/holo_red_light" />
+                    app:backgroundTint="@android:color/holo_red_light" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_green"
                     style="@style/Main.DrawingButton"
-                    android:background="@android:color/holo_green_light" />
+                    app:backgroundTint="@android:color/holo_green_light" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_orange"
                     style="@style/Main.DrawingButton"
-                    android:background="@android:color/holo_orange_light" />
+                    app:backgroundTint="@android:color/holo_orange_light" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_purple"
                     style="@style/Main.DrawingButton"
-                    android:background="@android:color/holo_purple" />
+                    app:backgroundTint="@android:color/holo_purple" />
 
             </LinearLayout>
 
-        </androidx.appcompat.widget.Toolbar>
-
-        <androidx.appcompat.widget.Toolbar
-            style="@style/Main.Text.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:background="@color/colorPrimaryDark"
-            android:gravity="center_horizontal" >
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:background="@color/colorPrimaryDark"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
@@ -151,14 +100,13 @@
                     android:text="Erase"/>
 
                 <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/drawing_erase"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginBottom="10dp" />
 
             </LinearLayout>
-
-        </androidx.appcompat.widget.Toolbar>
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
